# Data-Importer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cli/: main.py
core/: database.py
core/importers/: __init__.py  base_importer.py  csv_importer.py  database_source_importer.py  excel_importer.py  json_importer.py
src/data_importer/cli/: main.py
src/data_importer/core/: __init__.py  config.py  database.py
src/data_importer/core/importers/: __init__.py  base_importer.py  csv_importer.py  database_source_importer.py  excel_importer.py  json_importer.py
src/data_importer/web/: app.py  launcher.py
tests/: test_csv_importer.py  test_database_source_importer.py  test_excel_importer.py  test_json_importer.py
web/: app.py
